--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,3 +7,8 @@ spring:
 
 flyway:
   locations: classpath:db/migration
+  
+api:
+  security:
+    token:
+      secret: ${JWT_SECRET:my-secret-key}
